--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "startApp": "ng serve --open",
+    "startApp": "ng serve --proxy-config proxy.conf.json --open",
     "startServer": "nodemon ./src/server/server.js",
     "start": "concurrently \"npm run startApp\" \"npm run startServer\""
   },
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
     "angular-in-memory-web-api": "^0.11.0",
+    "mongoose": "^5.13.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
